[gd_scene load_steps=2 format=2]

[ext_resource path="res://TopMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UI" type="GridContainer" parent="CenterContainer"]
margin_left = 384.0
margin_top = 185.0
margin_right = 639.0
margin_bottom = 415.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10

[node name="DragAndDrop1" type="Button" parent="CenterContainer/UI"]
margin_right = 255.0
margin_bottom = 20.0
text = "Drag and Drop Test"

[node name="ObjCreateApproach2" type="Button" parent="CenterContainer/UI"]
margin_top = 30.0
margin_right = 255.0
margin_bottom = 50.0
text = "Object Create: Approach 2"

[node name="OOP&DraggableClasses" type="Button" parent="CenterContainer/UI"]
margin_top = 60.0
margin_right = 255.0
margin_bottom = 80.0
text = "OOP & Draggable Classes: Approach 2"

[node name="Adding to Layouts" type="Button" parent="CenterContainer/UI"]
margin_top = 90.0
margin_right = 255.0
margin_bottom = 110.0
text = "Adding to layouts"

[node name="Repopulating by menu parent" type="Button" parent="CenterContainer/UI"]
margin_top = 120.0
margin_right = 255.0
margin_bottom = 140.0
text = "Repopulating by Menu Parent"

[node name="Changing Layout" type="Button" parent="CenterContainer/UI"]
margin_top = 150.0
margin_right = 255.0
margin_bottom = 170.0
text = "Changing Layout"

[node name="Selection Property Generation" type="Button" parent="CenterContainer/UI"]
margin_top = 180.0
margin_right = 255.0
margin_bottom = 200.0
text = "Selection Menu Property Generation"

[node name="Selecting Draggable Objects" type="Button" parent="CenterContainer/UI"]
margin_top = 210.0
margin_right = 255.0
margin_bottom = 230.0
text = "Selecting Draggable Objects"

[connection signal="pressed" from="CenterContainer/UI/DragAndDrop1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/UI/ObjCreateApproach2" to="." method="_on_ObjCreateApproach2_pressed"]
[connection signal="pressed" from="CenterContainer/UI/OOP&DraggableClasses" to="." method="_on_OOPDraggableClasses_pressed"]
[connection signal="pressed" from="CenterContainer/UI/Adding to Layouts" to="." method="_on_Adding_to_Layouts_pressed"]
[connection signal="pressed" from="CenterContainer/UI/Repopulating by menu parent" to="." method="_on_Repopulating_by_menu_parent_pressed"]
[connection signal="pressed" from="CenterContainer/UI/Changing Layout" to="." method="_on_Changing_Layout_pressed"]
[connection signal="pressed" from="CenterContainer/UI/Selection Property Generation" to="." method="_on_SelectionPropGen_pressed"]
[connection signal="pressed" from="CenterContainer/UI/Selecting Draggable Objects" to="." method="_on_Selecting_Draggable_Objects_pressed"]
